# SorenShell

./: .gitignore  CMakeLists.txt  README.md  main.cpp  test.cpp
FileSystem/include/: BaseFile.hpp  Directory.hpp  File.hpp  FileSystem.hpp
FileSystem/src/: BaseFile.cpp  Directory.cpp  File.cpp  FileSystem.cpp
Hardware/include/: HardwareManager.hpp
Hardware/src/: HardwareManager.cpp
User/include/: User.hpp  UserManager.hpp
User/src/: User.cpp  UserManager.cpp
commands/include/: CdCommand.hpp  Command.hpp  CommandFactory.hpp  EchoCommand.hpp  ExitCommand.hpp  LsCommand.hpp  WhoamiCommand.hpp
commands/src/: CdCommand.cpp  Command.cpp  CommandFactory.cpp  EchoCommand.cpp  ExitCommand.cpp  LsCommand.cpp  WhoamiCommand.cpp
config/: user.yaml
include/: Base.hpp  BaseFile.hpp  Command.hpp  Directory.hpp  File.hpp  HardwareManager.hpp  Terminal.hpp  UserManager.hpp
src/: BaseFile.cpp  Command.cpp  CommandFactory.cpp  Directory.cpp  File.cpp  HardwareManager.cpp  Terminal.cpp  UserManager.cpp
